--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>JuniorSolarSprint</title>
+      <title>JSS</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
+      <meta name="google-site-verification" content="gwSykQ3upSpdVGXQ1yomI0Id6kHICPGF6wDOzEbDcWU" />
       <!-- bootstrap css -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- style css -->
