--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>rotot</title>
+      <title>JSS</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -110,7 +110,7 @@
                </div>
                <div class="col-md-6">
                   <div>
-                     <figure><img src="images/car_image5.jpg" alt="#" width="350" height="350" /></figure>
+                     <figure><img src="images/car_image7.jpg" alt="#" width="550" height="550" /></figure>
                   </div>
                </div>
             </div>
