--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <div class="row">
                            <div class="col-md-6">
                               <div class="text-bg">
-                                 <span>Junior Solar Sprint - 2022 </span>
+                                 <span>2022 Junior Solar Sprint</span>
                                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure  </p>
                                 <!-- <a href="#">Contact us</a> <a href="#">get a quote Now</a> -->
                               </div>
