--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>rotot</title>
+      <title>JSS</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -114,6 +114,7 @@
                         <div class="our_team">
                            <figure><img src="images/Ramya_Reddy.png" alt="#" /></figure>
                            <h3>Ramya Reddy </h3>
+						   <h4>TJHSST (Senior)</h4>
                            <span>Chief Coordinator</span>
                         </div>
                      </div>
@@ -121,6 +122,7 @@
                         <div class="our_team">
                            <figure><img src="images/ramreddy.jpg" alt="#" /></figure>
                            <h3>Ram Reddy </h3>
+						    <h4>TJHSST (Senior)</h4>
                            <span>Coordinator</span>
                         </div>
                      </div>
@@ -128,6 +130,7 @@
                         <div class="our_team">
                            <figure><img src="images/team3.png" alt="#" /></figure>
                            <h3>Pranav Bhimaraju </h3>
+						    <h4>Marshal High School (Senior)</h4>
                            <span>Coordinator</span>
                         </div>
                      </div>
