--- a/about.html
+++ b/about.html
@@ -71,13 +71,13 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="team.html">Our team </a>
                               </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="contact.html">Contact Us</a>
-                              </li>
                               <li class="nav-item d_none">
                                  <a class="nav-link" href="register.html">Register</a>
                               </li>
-                              <!--
+                              <!--							  
+                              <li class="nav-item">
+                                 <a class="nav-link" href="contact.html">Contact Us</a>
+                              </li>
                               <li class="nav-item d_none">
                                  <a class="nav-link" href="#">Login</a>
                               </li>
@@ -102,15 +102,28 @@
                <div class="col-md-6 ">
                   <div class="about_box">
                      <div class="titlepage">
-                        <h2>About JSS 2022</h2>
+                        <h2>About JSS</h2>
                      </div>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using  </p>
-                     <a class="read_more">Read More</a>
+                     <p>This is a non profit event. Participating in Junior Solar Sprint provides a hands-on opportunity for students to apply Science, Technology, Engineering and Mathematics (STEM) concepts, 
+					 creativity, and problem solving skills as they design, construct and race solar-powered cars. Participants use their imagination and ingenuity to construct 
+					 vehicles powered by a standardized solar panel and motor and compete against their peers. Teams are judged on car speed, supporting evidence of their design artistic merit, 
+					 and craftsmanship. Awards will be given for design in addition to the track event itself. 
+					 Government and non-government organizations supporters are Department of Energy and Environment(DOEE) and  Young Scholars Circle. </p>
+					 <p>
+					 JSS Team Cunducted brainstorming sessions multiple times  and also distributed the Solar Kits for free of cost for all the registered teams.  
+					 </p>
+                     <!-- <a class="read_more">Read More</a> -->
                   </div>
                </div>
                <div class="col-md-6">
                   <div>
                      <figure><img src="images/car_image7.jpg" alt="#" width="550" height="550" /></figure>
+                  </div>
+				  <div>
+                     <figure><img src="images/library1.jpg" alt="#" width="550" height="550" /></figure>
+                  </div>
+				  <div>
+                     <figure><img src="images/library2.jpg" alt="#" width="550" height="550" /></figure>
                   </div>
                </div>
             </div>
@@ -120,19 +133,16 @@
       <!--  footer -->
       <footer >
          <div class="footer">
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-5">
-                     <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>Phone :  +(1234) 567 890</li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : demo@gmail.com</li>
-                     </ul
+            <div class="copyright">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-12">
+                     </div>
                   </div>
                </div>
             </div>
          </div>
       </footer>
-	  
       <!-- end footer -->
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
