--- a/contact.html
+++ b/contact.html
@@ -71,14 +71,15 @@
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="team.html">Our team </a>
-                              </li>
-                              <li class="nav-item active">
-                                 <a class="nav-link" href="contact.html">Contact Us</a>
                               </li>                              
                               <li class="nav-item d_none">
                                  <a class="nav-link" href="register.html">Register</a>
                               </li>
 							  <!--
+							  
+                              <li class="nav-item active">
+                                 <a class="nav-link" href="contact.html">Contact Us</a>
+                              </li>
                               <li class="nav-item d_none">
                                  <a class="nav-link" href="#">Login</a>
                               </li>
@@ -123,19 +124,16 @@
       <!--  footer -->
       <footer >
          <div class="footer">
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-5">
-                     <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>Phone :  +(1234) 567 890</li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : demo@gmail.com</li>
-                     </ul
+            <div class="copyright">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-12">
+                     </div>
                   </div>
                </div>
             </div>
          </div>
       </footer>
-
       <!-- end footer -->
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
