--- a/team.html
+++ b/team.html
@@ -71,14 +71,15 @@
                               </li>
                               <li class="nav-item active">
                                  <a class="nav-link" href="team.html">Our team </a>
-                              </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="contact.html">Contact Us</a>
                               </li>                              
                               <li class="nav-item d_none">
                                  <a class="nav-link" href="register.html">Register</a>
                               </li>                              
 							  <!--
+							  
+                              <li class="nav-item">
+                                 <a class="nav-link" href="contact.html">Contact Us</a>
+                              </li>
                               <li class="nav-item d_none">
                                  <a class="nav-link" href="#">Login</a>
                               </li>
@@ -103,7 +104,7 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <h2>Our Team</h2>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+                     <p></p>
                   </div>
                </div>
             </div>
@@ -128,13 +129,12 @@
                      </div>
                      <div class="col-md-3 col-sm-6">
                         <div class="our_team">
-                           <figure><img src="images/team3.png" alt="#" /></figure>
+                           <figure><img src="images/pranav.jpg" alt="#" /></figure>
                            <h3>Pranav Bhimaraju </h3>
 						    <h4>Marshal High School (Senior)</h4>
                            <span>Coordinator</span>
                         </div>
-                     </div>
-                     
+                     </div>                     
                   </div>
                </div>
             </div>
@@ -144,13 +144,11 @@
       <!--  footer -->
       <footer >
          <div class="footer">
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-5">
-                     <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>Phone :  +(1234) 567 890</li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : demo@gmail.com</li>
-                     </ul
+            <div class="copyright">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-12">
+                     </div>
                   </div>
                </div>
             </div>
