--- a/workshop.html
+++ b/workshop.html
@@ -72,13 +72,14 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="team.html">Our team </a>
                               </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="contact.html">Contact Us</a>
-                              </li>
                               <li class="nav-item d_none">
                                  <a class="nav-link" href="register.html">Register</a>
                               </li>
 							  <!--
+							  
+                              <li class="nav-item">
+                                 <a class="nav-link" href="contact.html">Contact Us</a>
+                              </li>
                               <li class="nav-item d_none">
                                  <a class="nav-link" href="#">Login</a>
                               </li>
@@ -105,7 +106,7 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <h2>Our Workshops</h2>
-                     <p>It is a long established fact that a reader will be distracted by the readable</p>
+                     <p>JSS team conducted multiple workshops for Elementary and Middle School Students.</p>
                   </div>
                </div>
             </div>
@@ -116,19 +117,19 @@
                         <i><img src="images/workshop.jpg" alt="#"/></i>
                         <h3>workshop one</h3>
                      </div>
-                     <p>It is a long established fact that a reader will be distracted by the </p>
+                     <p>Introduction to the JSS Event</p>
                   </div>
-                  <a class="read_more margin_bottom1" href="#">See More</a>
+                  <a class="read_more margin_bottom1" href="https://vimeo.com/695904456/f1bdd24a7d" target="_blank" rel="noopener noreferrer">Video</a>
                </div>
                <div class="col-md-4">
                   <div id="co_hocha" class="services_box">
                      <div class="flex">
                         <i><img src="images/workshop.jpg" alt="#"/></i>
                         <h3>workshop two</h3>
-                     </div>
-                     <p>It is a long established fact that a reader will be distracted by the </p>
+                     </div>	
+                     <p>JSS Solar Car Background Knowledge</p>
                   </div>
-                  <a class="read_more margin_bottom1" href="#">See More</a>
+                  <a class="read_more margin_bottom1" href="https://vimeo.com/695873088/d42cce341e" target="_blank" rel="noopener noreferrer">Video</a>
                </div>
                <div class="col-md-4">
                   <div id="co_hocha" class="services_box">
@@ -136,9 +137,9 @@
                         <i><img src="images/workshop.jpg" alt="#"/></i>
                         <h3>workshop three</h3>
                      </div>
-                     <p>It is a long established fact that a reader will be distracted by the </p>
+                     <p>JSS Design Process & Example Designs</p>
                   </div>
-                  <a class="read_more" href="#">See More</a>
+                  <a class="read_more" href="https://vimeo.com/695904508/cf1d462940" target="_blank" rel="noopener noreferrer">Video</a>
                </div>			  
             </div>
 			
@@ -155,9 +156,9 @@
                         <i><img src="images/workshop.jpg" alt="#"/></i>
                         <h3>workshop four</h3>
                      </div>
-                     <p>It is a long established fact that a reader will be distracted by the </p>
+                     <p>More About The Solar Car and Specifications</p>
                   </div>
-                  <a class="read_more" href="#">See More</a>
+                  <a class="read_more" href="https://vimeo.com/696780818/f165299b75" target="_blank" rel="noopener noreferrer">Video</a>
                </div>
 			 </div>
 			 
@@ -167,13 +168,11 @@
       <!--  footer -->
       <footer >
          <div class="footer">
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-5">
-                     <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>Phone :  +(1234) 567 890</li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : demo@gmail.com</li>
-                     </ul
+            <div class="copyright">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-12">
+                     </div>
                   </div>
                </div>
             </div>
