--- a/about.html
+++ b/about.html
@@ -72,10 +72,16 @@
                                  <a class="nav-link" href="team.html">Our team </a>
                               </li>
                               <li class="nav-item d_none">
+                                 <a class="nav-link" href="awards.html">Awards</a>
+                              </li>
+							  <li class="nav-item">
+                                 <a class="nav-link" href="gallery.html">gallery</a>
+                              </li>
+                              <!--
+							  <li class="nav-item d_none">
                                  <a class="nav-link" href="register.html">Register</a>
                               </li>
-                              <!--							  
-                              <li class="nav-item">
+							  <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact Us</a>
                               </li>
                               <li class="nav-item d_none">
@@ -104,19 +110,27 @@
                      <div class="titlepage">
                         <h2>About JSS</h2>
                      </div>
-                     <p>This is a non profit event. Participating in Junior Solar Sprint provides a hands-on opportunity for students to apply Science, Technology, Engineering and Mathematics (STEM) concepts, 
-					 creativity, and problem solving skills as they design, construct and race solar-powered cars. Participants use their imagination and ingenuity to construct 
-					 vehicles powered by a standardized solar panel and motor and compete against their peers. Teams are judged on car speed, supporting evidence of their design artistic merit, 
-					 and craftsmanship. Awards will be given for design in addition to the track event itself. 
-					 Government and non-government organizations supporters are Department of Energy and Environment(DOEE) and  Young Scholars Circle. </p>
+                     <p>This is a nonprofit event. Participating in Junior Solar Sprint provides a hands-on opportunity for students to apply 
+                        science, technology, engineering and mathematical (STEM) concepts, creativity, and problem solving skills as they design, 
+                        construct and race solar-powered cars. Participants use their imagination and ingenuity to construct vehicles powered by 
+                        a standardized solar panel and motor and compete against their peers. Teams are judged on car speed and supporting evidence 
+                        of their design, artistic merit, and craftsmanship. Awards will be given for design in addition to the speed event itself. 
+                        Government and non-government organizations supporters are the Department of Energy and Environment (DOEE) and Young 
+                        Scholars Circle.
+                     </p>
 					 <p>
-					 JSS Team Cunducted brainstorming sessions multiple times  and also distributed the Solar Kits for free of cost for all the registered teams.  
-					 </p>
+                  The JSS Team conducted brainstorming sessions multiple times and also distributed material kits for free of cost for all the registered teams.
+               </p>
                      <!-- <a class="read_more">Read More</a> -->
                   </div>
                </div>
                <div class="col-md-6">
+			   
                   <div>
+                     <figure><img src="images/JUNIOR-SOLAR-SPRINT-FINAL.png" alt="#" width="550" height="550" /></figure>
+                  </div>
+				  
+				  <div>
                      <figure><img src="images/car_image7.jpg" alt="#" width="550" height="550" /></figure>
                   </div>
 				  <div>
