--- a/team.html
+++ b/team.html
@@ -73,9 +73,15 @@
                                  <a class="nav-link" href="team.html">Our team </a>
                               </li>                              
                               <li class="nav-item d_none">
+                                 <a class="nav-link" href="awards.html">Awards</a>
+                              </li>
+							  <li class="nav-item">
+                                 <a class="nav-link" href="gallery.html">gallery</a>
+                              </li>
+                              <!--
+							  <li class="nav-item d_none">
                                  <a class="nav-link" href="register.html">Register</a>
-                              </li>                              
-							  <!--
+                              </li>
 							  
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact Us</a>
@@ -114,7 +120,8 @@
                      <div class="col-md-3 col-sm-6">
                         <div class="our_team">
                            <figure><img src="images/Ramya_Reddy.png" alt="#" /></figure>
-                           <h3>Ramya Reddy </h3>
+                           <h3></h3>
+						   <h4><b>RAMYA REDDY</b></h4>
 						   <h4>TJHSST (Senior)</h4>
                            <span>Chief Coordinator</span>
                         </div>
@@ -122,7 +129,8 @@
                      <div class="col-md-3 col-sm-6">
                         <div class="our_team">
                            <figure><img src="images/ramreddy.jpg" alt="#" /></figure>
-                           <h3>Ram Reddy </h3>
+                           <h3></h3>
+						   <h4><b>RAM REDDY</b></h4>
 						    <h4>TJHSST (Senior)</h4>
                            <span>Coordinator</span>
                         </div>
@@ -130,11 +138,49 @@
                      <div class="col-md-3 col-sm-6">
                         <div class="our_team">
                            <figure><img src="images/pranav.jpg" alt="#" /></figure>
-                           <h3>Pranav Bhimaraju </h3>
-						    <h4>Marshal High School (Senior)</h4>
+                           <h3></h3>
+						   <h4><b>PRANAV BHIMARAJU</b></h4>
+						   <h4>Marshall HS (Senior)</h4>
                            <span>Coordinator</span>
                         </div>
                      </div>                     
+                  </div>
+               </div>
+            </div>
+			<h3></h3> <h3></h3> <h2></h2>
+			<div class="col-md-10 offset-md-1">
+                  <div class="row">
+                     <div class="col-md-3 col-sm-6">
+                        <div class="our_team"><h3/>
+                           <h4><B>SHRUTI BHIMARAJU</B></h4>
+						   <h4>University Of Virginia</h4>
+                           <span>Head Judge</span>
+                        </div>
+                     </div>
+                     <div class="col-md-3 col-sm-6">
+                        <div class="our_team">
+							<h3/>
+                           <h4><B>KENNETH DO</B></h4>
+						    <h4>TJHSST (Senior)</h4>
+                           <span>Judge</span>
+                        </div>
+                     </div>
+                     <div class="col-md-3 col-sm-6">
+                        <div class="our_team">
+                           <h3/>
+                           <h4><B>BENOY SEN</B></h4>
+						    <h4>TJHSST (Senior)</h4>
+                           <span>Judge</span>
+                        </div>
+                     </div>
+					 <div class="col-md-3 col-sm-6">
+                        <div class="our_team">
+                           <h3/>
+                           <h4><B>PATRICK BAI</B></h4>
+						    <h4>TJHSST (Senior)</h4>
+                           <span>Judge</span>
+                        </div>
+                     </div>	
                   </div>
                </div>
             </div>
