--- a/workshop.html
+++ b/workshop.html
@@ -73,9 +73,15 @@
                                  <a class="nav-link" href="team.html">Our team </a>
                               </li>
                               <li class="nav-item d_none">
+                                 <a class="nav-link" href="awards.html">Awards</a>
+                              </li>
+							  <li class="nav-item">
+                                 <a class="nav-link" href="gallery.html">gallery</a>
+                              </li>
+                              <!--
+							  <li class="nav-item d_none">
                                  <a class="nav-link" href="register.html">Register</a>
                               </li>
-							  <!--
 							  
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact Us</a>
