--- a/register.html
+++ b/register.html
@@ -72,10 +72,16 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="team.html">Our team </a>
                               </li>                              
-                              <li class="nav-item  active  d_none">
+                              <li class="nav-item d_none">
+                                 <a class="nav-link" href="awards.html">Awards</a>
+                              </li>
+							  <li class="nav-item">
+                                 <a class="nav-link" href="gallery.html">gallery</a>
+                              </li>
+                              <!--
+							  <li class="nav-item d_none">
                                  <a class="nav-link" href="register.html">Register</a>
                               </li>
-							  <!--
 							  
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact Us</a>
