--- a/awards.html
+++ b/awards.html
@@ -111,7 +111,8 @@
                      <div class="titlepage">
                         <h2>Awards</h2>
                      </div>
-                     <p>Participants came from two different counties and over nine different schools! The event had over 10 teams who came to race day and featured over 50 people who came to the event! We're very excited to announce the teams who were able to recieve prizes in the event!</p>
+                     <p>Participants came from two different counties and over nine different schools! The event had over 10 teams who came to race day and featured over 50 people who came to the event! We also had a guest speaker from the DOEE, Ms. Jennifer Johnston, come and give a speech before the awards ceremony about how the next generation can make an effort towards stopping climate change.</p>
+                     <p>We're very excited to announce the teams who were able to recieve prizes in the event!</p>
                      <h2><b>UPPER DIVISION</b></h2>
                      <h3>Speed (1st): Wang</h3>
                      <h3>Speed (2nd): Oliver Team</h3>
