--- a/index.html
+++ b/index.html
@@ -123,11 +123,9 @@
                            <div class="col-md-6">
                               <div class="text-bg">
                                  <span>Junior Solar Sprint</span>
-                                 <p>
-                                    Help elementary and middle school students to learn more about solar energy, physical forces, and other scientific topics with 
-                                    this unique hands-on engineering experience! Workshops will show you how to start building solar-powered cars. No previous 
-                                    experience with electronics or construction is necessary.                                     
-								         </p>
+                                 <p>Help Elementary and Middle School students to learn about solar energy, physical forces, and other science topics with this hands-on engineering experience. 
+								 Workshops will show you how to start building solar-powered cars. No previous experience with electronics or building things is necessary. 
+								 </p>
 								 <h2><b>Learning Objectives</b></h2>
 								
 								 <p>- Design and build a solar-powered car</p>
