override changes from previous push

--- a/about.html
+++ b/about.html
@@ -111,13 +111,11 @@
                         <h2>About JSS</h2>
                      </div>
                      <p>This is a non profit event. Participating in Junior Solar Sprint provides a hands-on opportunity for students to apply Science, Technology, Engineering and Mathematics (STEM) concepts, 
-					 creativity, and problem solving skills as they design, construct and race solar-powered cars. Participants use their imagination and ingenuity to construct 
-					 vehicles powered by a standardized solar panel and motor and compete against their peers. Teams are judged on car speed, supporting evidence of their design artistic merit, 
-					 and craftsmanship. Awards will be given for design in addition to the track event itself. 
-					 Government and non-government organizations supporters are Department of Energy and Environment(DOEE) and  Young Scholars Circle. </p>
-					 <p>
-					 JSS Team Cunducted brainstorming sessions multiple times  and also distributed the Solar Kits for free of cost for all the registered teams.  
-					 </p>
+                        creativity, and problem solving skills as they design, construct and race solar-powered cars. Participants use their imagination and ingenuity to construct 
+                        vehicles powered by a standardized solar panel and motor and compete against their peers. Teams are judged on car speed, supporting evidence of their design artistic merit, 
+                        and craftsmanship. Awards will be given for design in addition to the track event itself. 
+                        Government and non-government organizations supporters are Department of Energy and Environment (DOEE) and  Young Scholars Circle.</p>
+					 <p>The JSS Team conducted brainstorming sessions multiple times and also distributed material kits for free of cost for all the registered teams.</p>
                      <!-- <a class="read_more">Read More</a> -->
                   </div>
                </div>
