--- a/awards.html
+++ b/awards.html
@@ -111,14 +111,25 @@
                      <div class="titlepage">
                         <h2>Awards</h2>
                      </div>
-                     <p>This is a non profit event. Participating in Junior Solar Sprint provides a hands-on opportunity for students to apply Science, Technology, Engineering and Mathematics (STEM) concepts, 
-					 creativity, and problem solving skills as they design, construct and race solar-powered cars. Participants use their imagination and ingenuity to construct 
-					 vehicles powered by a standardized solar panel and motor and compete against their peers. Teams are judged on car speed, supporting evidence of their design artistic merit, 
-					 and craftsmanship. Awards will be given for design in addition to the track event itself. 
-					 Government and non-government organizations supporters are Department of Energy and Environment(DOEE) and  Young Scholars Circle. </p>
-					 <p>
-					 JSS Team Cunducted brainstorming sessions multiple times  and also distributed the Solar Kits for free of cost for all the registered teams.  
-					 </p>
+                     <p>Participants came from two different counties and over nine different schools! The event had over 10 teams who came to race day and featured over 50 people who came to the event! We also had a guest speaker who works as an energy specialist in the DOEE, Ms. Jennifer Johnston, come and give a speech before the awards ceremony about how the next generation can make an effort towards stopping climate change.</p>
+                     <p>We're very excited to announce the teams who were able to recieve prizes in the event!</p>
+                     <h2><b>UPPER DIVISION</b></h2>
+                     <h3>Speed (1st): Wang</h3>
+                     <h3>Speed (2nd): Oliver Team</h3>
+                     <h3>Speed (3rd): Ataraxia</h3>
+                     <h3>Aesthetic: Ataraxia</h3>
+                     <h3>Design: Ataraxia</h3>
+                     <h3>Craftmanship: Oliver Team</h3>
+                     <h3>Team Spirit: Team 40</h3>
+                     <p></p>
+                     <h2><b>LOWER DIVISION</b></h2>
+                     <h3>Speed (1st): 000s</h3>
+                     <h3>Speed (2nd): Cool Peeps</h3>
+                     <h3>Speed (3rd): Dogez</h3>
+                     <h3>Aesthetic: Fancy Pants</h3>
+                     <h3>Design: Solar Sisters</h3>
+                     <h3>Craftmanship: Dogez</h3>
+                     <h3>Team Spirit: OOOs</h3>
                      <!-- <a class="read_more">Read More</a> -->
                   </div>
                </div>
